@@ -3,6 +3,7 @@ Changes for 3.2.5rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11864] Fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
 ........S. [ZBX-11738] fixed performing actions for problemas that have started and resolved while another problems escalation is executed (vikotrs)
 ..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
 ........S. [ZBX-11829] fixed generation of problems in multiple event mode (Sergejs)
@@ -352,6 +353,7 @@ Changes for 3.0.9rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11864] Fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
 ..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
 ..F....... [ZBX-11624] fixed undefined index error for regular expressions form (vmurzins)
 .......PS. [ZBX-11855] fixed data truncation when escaping strings that contain carriage return (vso)
@@ -1989,6 +1991,7 @@ Changes for 2.2.18rc1
 New features:
 
 Bug fixes:
+.......PS. [ZBX-11864] Fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
 ..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
 .......PS. [ZBX-11758] fixed crash in web monitoring when variable is empty or the first step was called regexp function on Solaris (Sergejs)
 
